# aura_proto

./: .gitignore  README.md
aura_dart/: generate.dart  pubspec.yaml
aura_dart/.dart_tool/: package_config.json  package_graph.json
aura_dart/lib/: aura_dart.dart
aura_dart/lib/chat/v1/: chat.pb.dart  chat.pbenum.dart  chat.pbgrpc.dart  chat.pbjson.dart
aura_dart/lib/common/v1/: common.pb.dart  common.pbenum.dart  common.pbjson.dart
aura_dart/lib/general/v1/: general.pb.dart  general.pbenum.dart  general.pbgrpc.dart  general.pbjson.dart
aura_dart/lib/resource/v1/: resource.pb.dart  resource.pbenum.dart  resource.pbgrpc.dart  resource.pbjson.dart
aura_dart/lib/testing/v1/: testing.pb.dart  testing.pbenum.dart  testing.pbgrpc.dart  testing.pbjson.dart
aura_dart/lib/user/v1/: user.pb.dart  user.pbenum.dart  user.pbgrpc.dart  user.pbjson.dart
aura_rust/: Cargo.toml  build.rs
aura_rust/src/: lib.rs
proto/chat/v1/: chat.proto
proto/common/v1/: common.proto
proto/general/v1/: general.proto
proto/resource/v1/: resource.proto
proto/user/v1/: user.proto
