[package]
name = "aura_rust"
description = "The official Aura protocol buffers API."
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.14.5", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
surrealdb = { version = "3.0.5", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
walkdir = "2.5.0"
